[gd_scene load_steps=9 format=2]

[ext_resource path="res://world/textures/galaxy-background.png" type="Texture" id=1]
[ext_resource path="res://levels/level4/Level4.gd" type="Script" id=2]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/level4/BossStarfield.gd" type="Script" id=5]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 180, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 75.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 50.5
angle_random = 0.5
scale = 2.0
scale_random = 0.9
color = Color( 0.623529, 0.870588, 0.952941, 1 )
hue_variation = 0.01
hue_variation_random = 1.0

[sub_resource type="ParticlesMaterial" id=4]
render_priority = 10
emission_shape = 2
emission_box_extents = Vector3( 180, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 75.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 50.5
angle_random = 0.5
scale = 2.0
scale_random = 0.9
color = Color( 0.623529, 0.870588, 0.952941, 1 )
hue_variation = 0.01
hue_variation_random = 1.0

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 1, 320, 1 )
flag_disable_z = true
spread = 75.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 50.5
angle_random = 0.5
scale = 2.0
scale_random = 0.9
color = Color( 0.623529, 0.870588, 0.952941, 1 )
hue_variation = 0.01
hue_variation_random = 1.0

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 1, 320, 1 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 75.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 0.9
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 50.5
angle_random = 0.5
scale = 2.0
scale_random = 1.0
color = Color( 0.623529, 0.870588, 0.952941, 1 )
hue_variation = 0.01
hue_variation_random = 1.0

[node name="Level4" type="Node2D" groups=["levels"]]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 180, 610 )
z_index = -1000
texture = ExtResource( 1 )

[node name="BossStarfieldDown" type="Particles2D" parent="."]
pause_mode = 2
light_mask = 2
position = Vector2( 180, 0 )
z_index = -100
emitting = false
lifetime = 50.0
preprocess = 50.0
fract_delta = false
process_material = SubResource( 1 )
script = ExtResource( 5 )

[node name="BossStarfieldUp" type="Particles2D" parent="."]
pause_mode = 2
light_mask = 2
position = Vector2( 180, 640 )
z_index = -100
emitting = false
lifetime = 50.0
preprocess = 50.0
fract_delta = false
process_material = SubResource( 4 )
script = ExtResource( 5 )

[node name="BossStarfieldRight" type="Particles2D" parent="."]
pause_mode = 2
light_mask = 2
position = Vector2( 0, 320 )
z_index = -100
emitting = false
lifetime = 50.0
preprocess = 50.0
fract_delta = false
process_material = SubResource( 5 )
script = ExtResource( 5 )

[node name="BossStarfieldLeft" type="Particles2D" parent="."]
pause_mode = 2
light_mask = 2
position = Vector2( 360, 320 )
z_index = -100
emitting = false
lifetime = 50.0
preprocess = 50.0
fract_delta = false
process_material = SubResource( 6 )
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="Timers" type="Node" parent="."]

[node name="BossWaitTimer" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true

[node name="ScoreDecrementTimer" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true

[node name="Enemy1Timer" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true

[connection signal="timeout" from="Timers/BossWaitTimer" to="." method="_on_BossWaitTimer_timeout"]
[connection signal="timeout" from="Timers/ScoreDecrementTimer" to="." method="_on_ScoreDecrementTimer_timeout"]
[connection signal="timeout" from="Timers/Enemy1Timer" to="." method="_on_Enemy1Timer_timeout"]
